test/loop/confidence/errors/verify_error_5.loop
# Scope resolution error for constructor call

main ->
  wrong1: new java.util.Gate()
  wrong2: new java.util.Date('hi', 'bye')
  wrong3: new Date()
  ''
